test/cbmc/negative_tests/signed_overflow_check/signed_overflow_check_harness.c
../../aws-templates-for-cbmc-proofs/template-for-repository/negative_tests/signed_overflow_check/signed_overflow_check_harness.c